--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "webpack",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "server": "webpack-dev-server --port=3000"
   },
   "dependencies": {
     "axios": "0.16.1",
