--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "lint": "eslint **/*.{js,jsx} --quiet",
     "test": "jest",
     "test:update": "jest -u",
+    "test:coverage": "jest --coverage",
     "watch": "webpack --watch"
   },
+  "jest": {
+    "snapshotSerializers": ["jest-serializer-enzyme"]
+  }, 
   "dependencies": {
     "axios": "0.16.1",
     "babel-plugin-dynamic-import-webpack": "1.0.1",
